# technopolis-menu

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  renovate.json
.github/workflows/: docker-image.yml  lint.yml
k8s/: cronjob.yaml
technopolis_menu/: __main__.py  config.py  extractor.py  s3.py  slack.py  stats.py
test/: extractor_test.py
