[tool.poetry]
name = "technopolis-menu"
version = "0.1.0"
description = ""
authors = ["Bjørn Tore Håvie <itsbth@itsbth.com>"]
readme = "README.md"
packages = [{ include = "technopolis_menu" }]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.24.0"
python-dotenv = "^1.0.0"
openai = "^0.27.2"
boto3 = "^1.26.95"
pytz = "^2023.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
mypy = "^1.1.1"
isort = "^5.12.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 128
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 128
